# jolimail

./: .dockerignore  .gitignore  .gitlab-ci.yml  .travis.yml  Dockerfile  Makefile  alpine.Dockerfile  app.json  contributing.md  crosscompile.Dockerfile  docker-compose.dev.yml  docker-compose.example.yml  docker-compose.yml  heroku.Dockerfile  heroku.yml  multiarch-alpine.Dockerfile  multiarch.Dockerfile  readme.md
.circleci/: config.yml
.github/: dependabot.yml  semantic.yml
client/: .prettierrc  Makefile  config-overrides.js  package-lock.json  package.json  tsconfig.json
client/.storybook/: main.js
client/public/: index.html  manifest.json
client/src/: application.test.tsx  application.tsx  index.tsx  serviceWorker.ts  setupTests.ts  theme.ts
client/src/__mocks__/: mrml-js.js
client/src/__utils__/: faker.tsx  swr.tsx
client/src/component/alert-snackbar/: index.test.tsx  index.tsx
client/src/component/button-fab/: index.test.tsx  index.tsx
client/src/component/clickable/: index.test.tsx  index.tsx
client/src/component/confirm-clickable/: index.test.tsx  index.tsx
client/src/component/confirm-dialog/: index.test.tsx  index.tsx
client/src/component/empty-state/: index.tsx
client/src/component/loading-state/: index.tsx
client/src/component/palette-button/: index.tsx
client/src/component/palette-content-button/: index.tsx
client/src/component/palette-section-button/: index.tsx
client/src/component/skeleton/: index.test.tsx  index.tsx
client/src/component/template-cardlet/: index.stories.tsx  index.test.tsx  index.tsx
client/src/component/template-list/: index.tsx
client/src/component/template-preview/: button-element.tsx  divider-element.tsx  (+9 more)
client/src/service/: array.ts  editor.ts  json-schema.test.ts  json-schema.ts  mrml.ts  server.test.ts  server.ts  utils.ts
dockerfiles/: client.Dockerfile  common.Dockerfile  server.Dockerfile
documentation/: architecture.md
resources/: github-social.xcf
server/: .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.dev.yml
server/migrations/: 20200609_184000-down.sql  20200609_184000-up.sql  20200609_184001-down.sql  20200609_184001-up.sql  20200609_184002-down.sql  20200609_184002-up.sql  20200609_184003-down.sql  20200609_184003-up.sql
server/src/: error.rs  main.rs  test_util.rs
server/src/controller/: client.rs  mod.rs  settings.rs  status.rs
server/src/controller/template/: content.rs  create.rs  delete.rs  get.rs  get_content.rs  list.rs  mod.rs  update.rs
server/src/controller/template_version/: activate.rs  create.rs  delete.rs  get.rs  get_content.rs  list.rs  mod.rs  update.rs
server/src/model/: mod.rs
server/src/model/template/: content.rs  create.rs  mod.rs  update.rs
server/src/model/template_version/: create.rs  mod.rs  update.rs
server/src/service/: mod.rs  validation.rs
server/src/service/database/: client.rs  migration.rs  mod.rs
(+99 files in other folders)
