[package]
name = "jolimail"
version = "0.3.0"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.4.1"
actix-http = "2.2.0"
actix-web = "3.2.0"
actix-rt = "1.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.1"
jsonschema = "0.4.0"
lazy_static = "1.4.0"
log = "0.4.8"
regex = "1.3.9"
serde = { features = ["derive"], version = "1.0.114" }
serde_json = { version = "1.0.55" }
slug = "0.1.4"
sqlx = { version = "0.4.1", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "json", "tls" ] }
uuid = { version = "0.8.1", features = ["serde"] }

[dev-dependencies]
env-test-util = "1.0.1"
serial_test = "0.5.1"
tokio = { version = "0.2.23", features = ["full"] }
