[package]
name = "jolimail"
version = "0.3.1"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.5.0"
actix-http = "2.2.0"
actix-web = "3.3.2"
actix-rt = "1.1.1"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.8.1"
jsonschema = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.4.3"
serde = { features = ["derive"], version = "1.0.123" }
serde_json = { version = "1.0.61" }
slug = "0.1.4"
sqlx = { version = "0.4.2", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "tls",
] }
uuid = { version = "0.8.2", features = ["serde"] }

[dev-dependencies]
env-test-util = "1.0.1"
serial_test = "0.5.1"
tokio = { version = "0.2.24", features = ["full"] }
