[package]
name = "jolimail"
version = "0.3.2"
authors = ["Jérémie Drouet <jeremie.drouet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "=0.6.0-beta.4"
actix-http = "=3.0.0-beta.5"
actix-web = "=4.0.0-beta.5"
actix-rt = "2.3.0"
chrono = { version = "0.4.19", features = ["serde"] }
env_logger = "0.9.0"
jsonschema = { version = "0.12.2", default-features = false }
lazy_static = "1.4.0"
log = "0.4.14"
regex = "1.5.4"
serde = { features = ["derive"], version = "1.0.130" }
serde_json = { version = "1.0.68" }
slug = "0.1.4"
sqlx = { version = "0.5.1", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "json",
  "tls",
] }
uuid = { version = "0.8.2", features = ["serde"] }

# Fix build in docker
funty = "=1.1.0"

[dev-dependencies]
env-test-util = "1.0.1"
serial_test = "0.5.1"
